--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "author": "Sergey Koternyak <sergeykoternyak@gmail.com>",
   "dependencies": {
-    "node-static": "^0.7.7",
-    "jquery": "^2.2.4",
+    "font-awesome": "^4.6.3",
+    "jquery": "^3.0.0",
     "lodash": "^4.13.1",
+    "node-static": "^0.7.7",
     "opener": "^1.4.1"
   },
   "devDependencies": {
