--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "1.0.0",
   "description": "ToDoList on JQuery & ES2015",
   "scripts": {
-    "build": "node ./node_modules/less/bin/lessc ./styles/style.less ./styles/style.css && node ./node_modules/postcss-cli/bin/postcss --use autoprefixer styles/*.css -d styles",
+    "build": "webpack",
     "start": "npm run build && node ./node_modules/opener/opener.js http://127.0.0.1:8080 && node ./node_modules/node-static/bin/cli.js"
   },
   "author": "Sergey Koternyak <sergeykoternyak@gmail.com>",
   "dependencies": {
+    "autoprefixer": "^6.3.6",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "font-awesome": "^4.6.3",
     "jquery": "^3.0.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lodash": "^4.13.1",
     "node-static": "^0.7.7",
-    "opener": "^1.4.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "less": "^2.7.1",
-    "postcss-cli": "^2.5.2"
+    "opener": "^1.4.1",
+    "postcss-loader": "^0.9.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
   }
 }
